new post for june 15

--- a/_posts/2016-06-07-awhile.markdown
+++ b/_posts/2016-06-07-awhile.markdown
@@ -7,15 +7,16 @@ author:     "Will"
 header-img: "img/june16/20160606_182132c.jpg"
 ---
 
-Hi humans! It's been ruff these last few days. so much happening to the humans in my life
+Hi interweb humans! It's been ruff these last few days. there's so much happening with the humans in my life
 
-First i played in the yard...
+one of the humans that live upstairs escaped so i must wait at this door. some other human that smells like 2 cats showed up for the weekend though...
+![outside](/img/june16/20160529_155651c.jpg)
+
+We played in the yard...
 ![outside](/img/june16/20160527_153627c.jpg)
 
+Outside time is the best time
 ![outside](/img/june16/20160527_153631c.jpg)
-
-But then i got so tired... also, one of the humans that live upstairs escaped; i must wait at this door... some other human that smells like 2 cats showed up for the weekend though...
-![outside](/img/june16/20160529_155651c.jpg)
 
 Oh hi, you see me?
 ![outside](/img/june16/20160529_204843c.jpg)
